Fix About section mobile layout

--- a/public/assets/scss/layout/_about.scss
+++ b/public/assets/scss/layout/_about.scss
@@ -6,10 +6,23 @@
 .tg-about{
     &-thumb{
         &-wrap{
+            @media #{$md,$sm,$xs} {
+                text-align: center;
+                margin-bottom: 30px;
+            }
             & img{
                 @media #{$md,$sm,$xs} {
-                   margin-bottom: 30px;
+                   margin-bottom: 20px;
                    width: 100%;
+                   max-width: 280px;
+                   height: auto;
+                   margin-left: auto;
+                   margin-right: auto;
+                   display: block;
+                }
+                @media #{$xs} {
+                   margin-bottom: 15px;
+                   max-width: 250px;
                 }
             }
         }
@@ -18,12 +31,22 @@
             margin-right: -15px;
             @media #{$lg,$md,$sm,$xs} {
                 margin: 0;
+                float: none;
+                display: block;
+                max-width: 200px;
+                margin-left: auto;
+                margin-right: auto;
             }
         }
         &-4{
             margin-left: -15px;
             @media #{$lg,$md,$sm,$xs} {
                 margin: 0;
+                float: none;
+                display: block;
+                max-width: 200px;
+                margin-left: auto;
+                margin-right: auto;
             }
         }
     }
@@ -66,8 +89,15 @@
                 display: flex;
                 column-gap: 60px;
                 flex-wrap: wrap;
-                @media #{$xs} {
+                @media #{$md,$sm} {
                     column-gap: 40px;
+                    justify-content: center;
+                }
+                @media #{$xs} {
+                    flex-direction: column;
+                    align-items: center;
+                    row-gap: 25px;
+                    column-gap: 0;
                 }
             }
             &-icon{
@@ -116,6 +146,10 @@
                 display: flex;
                 align-items: center;
                 flex-wrap: wrap;
+                @media #{$xs} {
+                    justify-content: center;
+                    text-align: center;
+                }
             }
         }
         &-right{
